# pyschild

./: .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  setup_utils.py
.github/workflows/: greetings.yml
ci/: parse-conda-requirements.py
pyschild/: __init__.py  _version.py  cli.py  signal.py  sky.py  star.py  utils.py
pyschild/orbit/: __init__.py  __main__.py  null.py  plot.py  timelike.py
pyschild/orbit/tests/: __init__.py  test_main.py  test_null.py  test_plot.py  test_timelike.py
pyschild/tests/: __init__.py  test_cli.py  test_signal.py  test_sky.py  test_star.py  test_utils.py
pyschild/tests/data/: complete-skymap.fits  star-field.csv
pyschild/utils/: __init__.py  color.py  math.py
pyschild/utils/tests/: __init__.py  test_math.py
