[aliases]
test = pytest

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = pyschild/_version.py
versionfile_build = pyschild/_version.py
tag_prefix = v
parentdir_prefix = pyschild-

[tool:pytest]
; print skip reasons
addopts = -r s

[coverage:run]
source = pyschild
omit =
	pyschild/*version*.py

[metadata]
license_file = LICENSE

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	ci/,
	docs/,
	pyschild/_version.py,
	versioneer.py,
